script/kind-session-persistence/tests/gateway-traefikservice-route-wrr/httproute-cookie.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gw-tsr-wrr-cookie
  namespace: default
spec:
  parentRefs:
    - name: traefik-gateway
  hostnames:
    - whoami-tsr-wrr-cookie.localhost
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tsr-wrr-cookie
          kind: TraefikService
          group: traefik.io
          port: 80
      sessionPersistence:
        sessionName: route-cookie
        type: Cookie
        cookieConfig:
          lifetimeType: Session
