script/kind-session-persistence/tests/gateway-traefikservice-route-wrr/service-a-cookie.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-tsr-wrr-a-cookie
  namespace: default
spec:
  selector:
    app: whoami-tsr-wrr-a
  ports:
    - name: web
      port: 80
      targetPort: 80
