script/kind-session-persistence/tests/gateway-traefikservice-route-wrr/traefikservice-header.yaml
---
apiVersion: traefik.io/v1alpha1
kind: TraefikService
metadata:
  name: tsr-wrr-header
  namespace: default
spec:
  weighted:
    sticky:
      header:
        name: X-TSR-WRR-ONLY
    services:
      - name: whoami-tsr-wrr-a-header
        port: 80
      - name: whoami-tsr-wrr-b-header
        port: 80
